--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "qixiaojun/artisan",
     "description": "hans artisan",
-    "type": "?",
+    "type": "abc",
     "license": "mit",
     "authors": [
         {
